@@ -193,9 +193,42 @@ void TextualOutputPort::format(const ucs4string& fmt, Object args)
     return;
 }
 
-void TextualOutputPort::putDatum(Object o)
+// borrwed from Ypsilon
+bool TextualOutputPort::writeAbbreviated(Object obj)
 {
-    // todo more faster code
+    if (obj.isSymbol()) {
+        if (obj == Symbol::QUOTE || obj == Symbol::QUOTE_B) {
+            putChar('\'');
+            return true;
+        } else if (obj == Symbol::UNQUOTE || obj == Symbol::UNQUOTE_B) {
+            putChar(',');
+            return true;
+        } else if (obj == Symbol::UNQUOTE_SPLICING || obj == Symbol::UNQUOTE_SPLICING_B) {
+            putString(",@");
+            return true;
+        } else if (obj == Symbol::QUASIQUOTE || obj == Symbol::QUASIQUOTE_B) {
+            putChar('`');
+            return true;
+        } else if (obj == Symbol::SYNTAX || obj == Symbol::SYNTAX_B) {
+            putString(UC("#\'"));
+            return true;
+        } else if (obj == Symbol::UNSYNTAX || obj == Symbol::UNSYNTAX_B) {
+            putString(UC("#,"));
+            return true;
+        } else if (obj == Symbol::UNSYNTAX_SPLICING || obj == Symbol::UNSYNTAX_SPLICING_B) {
+            putString("#,@");
+            return true;
+        } else if (obj == Symbol::QUASISYNTAX || obj == Symbol::QUASISYNTAX_B) {
+            putString(UC("#`"));
+            return true;
+        }
+
+    }
+    return false;
+}
+
+template<bool isHumanReadable> void TextualOutputPort::print(Object o)
+{
     if (o.isTrue()) {
         putString(UC("#t"));
     } else if (o.isFalse()) {
@@ -241,100 +274,108 @@ void TextualOutputPort::putDatum(Object o)
         snprintf(buf, 32, "[comp:%d]", o.toCompilerInstruction());
         putString(buf);
     } else if (o.isChar()) {
-        putString(UC("#\\"));
-        ucs4char c = o.toChar();
-        switch (c) {
-        case 0:
-            putString(UC("nul"));
-            break;
-        case ' ':
-            putString(UC("space"));
-            break;
-        case '\n':
-            // R6RS (4.2.6 Characters) says: "The #\newline notation is retained for backward compatibility. Its
-            // use is deprecated; #\linefeed should be used instead."
-            putString(UC("linefeed"));
-            break;
-        case '\a':
-            putString(UC("alarm"));
-            break;
-        case '\b':
-            putString(UC("backspace"));
-            break;
-        case '\t':
-            putString(UC("tab"));
-            break;
-        case '\v':
-            putString(UC("vtab"));
-            break;
-        case 0x0C:
-            putString(UC("page"));
-            break;
-        case 0x0D:
-            putString(UC("return"));
-            break;
-        case 0x1B:
-            putString(UC("esc"));
-            break;
-        case 0x7F:
-            putString(UC("delete"));
-            break;
-
-        default:
-            putChar(c);
-        }
-    } else if (o.isString()) {
-        const ucs4char DOUBLE_QUOTE = '\"';
-        const ucs4char ESCAPSE      = '\\';
-
-        // Escape patterns.
-        //   [a][\n][b]                           => [\"][a][\\][n][b][\"]
-        //   [a][\\][\n][b]                       => [\"][a][\\][\\][\\][n][b][\"]
-        //   [a][\"][b][\"][c]                    => [\"][a][\\][\"][b][\\][\"][c]
-        //   [a][\"][b][\\][\"][c][\\][\"][\"][d] => [\"][a][\\][\"][[b][\\][\\][\\][\"][c][\\][\\][\\][\"][\\][\"][d]
-        ucs4string& s = o.toString()->data();
-        putChar(DOUBLE_QUOTE);
-        for (size_t i = 0; i < s.size(); i++) {
-            const ucs4char ch = s[i];
-            switch(ch) {
-            case(ESCAPSE):
-                putChar(ESCAPSE);
-                putChar(ESCAPSE);
+        if (isHumanReadable) {
+            putChar(o.toChar());
+        } else { // isHumanReadable = false
+            putString(UC("#\\"));
+            ucs4char c = o.toChar();
+            switch (c) {
+            case 0:
+                putString(UC("nul"));
+                break;
+            case ' ':
+                putString(UC("space"));
                 break;
             case '\n':
-                putChar(ESCAPSE);
-                putChar('n');
+                // R6RS (4.2.6 Characters) says: "The #\newline notation is retained for backward compatibility. Its
+                // use is deprecated; #\linefeed should be used instead."
+                putString(UC("linefeed"));
                 break;
             case '\a':
-                putChar(ESCAPSE);
-                putChar('a');
+                putString(UC("alarm"));
                 break;
             case '\b':
-                putChar(ESCAPSE);
-                putChar('b');
+                putString(UC("backspace"));
                 break;
             case '\t':
-                putChar(ESCAPSE);
-                putChar('t');
+                putString(UC("tab"));
                 break;
             case '\v':
-                putChar(ESCAPSE);
-                putChar('v');
+                putString(UC("vtab"));
                 break;
-            case '\r':
-                putChar(ESCAPSE);
-                putChar('r');
+            case 0x0C:
+                putString(UC("page"));
+                break;
+            case 0x0D:
+                putString(UC("return"));
+                break;
+            case 0x1B:
+                putString(UC("esc"));
+                break;
+            case 0x7F:
+                putString(UC("delete"));
                 break;
 
-            case DOUBLE_QUOTE:
-                putChar(ESCAPSE);
-                putChar(DOUBLE_QUOTE);
-                break;
             default:
-                putChar(ch);
+                putChar(c);
             }
         }
-        putChar(DOUBLE_QUOTE);
+    } else if (o.isString()) {
+        if (isHumanReadable) {
+            putString(o.toString());
+        } else {
+            const ucs4char DOUBLE_QUOTE = '\"';
+            const ucs4char ESCAPSE      = '\\';
+
+            // Escape patterns.
+            //   [a][\n][b]                           => [\"][a][\\][n][b][\"]
+            //   [a][\\][\n][b]                       => [\"][a][\\][\\][\\][n][b][\"]
+            //   [a][\"][b][\"][c]                    => [\"][a][\\][\"][b][\\][\"][c]
+            //   [a][\"][b][\\][\"][c][\\][\"][\"][d] => [\"][a][\\][\"][[b][\\][\\][\\][\"][c][\\][\\][\\][\"][\\][\"][d]
+            ucs4string& s = o.toString()->data();
+            putChar(DOUBLE_QUOTE);
+            for (size_t i = 0; i < s.size(); i++) {
+                const ucs4char ch = s[i];
+                switch(ch) {
+                case(ESCAPSE):
+                    putChar(ESCAPSE);
+                    putChar(ESCAPSE);
+                    break;
+                case '\n':
+                    putChar(ESCAPSE);
+                    putChar('n');
+                    break;
+                case '\a':
+                    putChar(ESCAPSE);
+                    putChar('a');
+                    break;
+                case '\b':
+                    putChar(ESCAPSE);
+                    putChar('b');
+                    break;
+                case '\t':
+                    putChar(ESCAPSE);
+                    putChar('t');
+                    break;
+                case '\v':
+                    putChar(ESCAPSE);
+                    putChar('v');
+                    break;
+                case '\r':
+                    putChar(ESCAPSE);
+                    putChar('r');
+                    break;
+
+                case DOUBLE_QUOTE:
+                    putChar(ESCAPSE);
+                    putChar(DOUBLE_QUOTE);
+                    break;
+                default:
+                    putChar(ch);
+                }
+            }
+            putChar(DOUBLE_QUOTE);
+        }
     } else if (o.isPair()) {
         bool abbreviated = o.cdr().isPair() && o.cdr().cdr().isNil() && writeAbbreviated(o.car());
         if (abbreviated) {
@@ -350,14 +391,14 @@ void TextualOutputPort::putDatum(Object o)
                 if (e.car() == Symbol::UNQUOTE) {
                     if (e.cdr().isPair() && e.cdr().cdr().isNil()) {
                         putString(". ,");
-                        putDatum(e.cdr().car());
+                        print<isHumanReadable>(e.cdr().car());
                         break;
                     }
                 }
-                putDatum(e.car());
+                print<isHumanReadable>(e.car());
             } else {
                 putString(". ");
-                putDatum(e);
+                print<isHumanReadable>(e);
                 break;
             }
         }
@@ -369,7 +410,7 @@ void TextualOutputPort::putDatum(Object o)
         Vector* v = o.toVector();
         putString(UC("#("));
         for (int i = 0; i < v->length(); i++) {
-            putDatum(v->ref(i));
+            print<isHumanReadable>(v->ref(i));
             if (i != v->length() - 1) putChar(' ');
         }
         putString(UC(")"));
@@ -414,11 +455,11 @@ void TextualOutputPort::putDatum(Object o)
         putString(UC("#<hashtable>"));
     } else if (o.isClosure()) {
         putString(UC("#<closure "));
-        putDatum(Object::makeFixnum(o.val));
+        print<isHumanReadable>(Object::makeFixnum(o.val));
         putString(UC(">"));
     } else if (o.isCProcedure()) {
         putString(UC("#<subr "));
-        putDatum(getCProcedureName(o));
+        print<isHumanReadable>(getCProcedureName(o));
         putString(UC(">"));
     } else if (o.isByteVector()) {
         ByteVector* const byteVector = o.toByteVector();
@@ -428,7 +469,7 @@ void TextualOutputPort::putDatum(Object o)
             if (i != 0) {
                 putString(" ");
             }
-            putDatum(Object::makeFixnum(byteVector->u8Ref(i)));
+            print<isHumanReadable>(Object::makeFixnum(byteVector->u8Ref(i)));
         }
         putString(UC(")"));
     } else if (o.isBox()) {
@@ -460,15 +501,15 @@ void TextualOutputPort::putDatum(Object o)
             if (it != conditions.begin()) {
                 putString(UC(" "));
             }
-            putDatum(*it);
+            print<isHumanReadable>(*it);
         }
         putString(UC(">"));
     } else if (o.isRecord()) {
         Record* const record = o.toRecord();
         putString(UC("#<record "));
-        putDatum(record->recordTypeDescriptor()->name());
+        print<isHumanReadable>(record->recordTypeDescriptor()->name());
 //         for (int i = 0; i < record->fieldsLength(); i++) {
-//             putDatum(record->fieldAt(i));
+//             print<isHumanReadable>(record->fieldAt(i));
 //             putString(UC(" "));
 //         }
         putString(UC(">"));
@@ -487,347 +528,40 @@ void TextualOutputPort::putDatum(Object o)
         const Object real = c->real();
         const Object imag = c->imag();
         if (!Arithmetic::isExactZero(real)) {
-            putDatum(real);
+            print<isHumanReadable>(real);
         }
         if (Arithmetic::ge(imag, Object::makeFixnum(0)) &&
             !(imag.isFlonum() && (imag.toFlonum()->isNegativeZero() || (imag.toFlonum()->isInfinite())))) {
             putString(UC("+"));
         } else {
         }
-        putDatum(imag);
+        print<isHumanReadable>(imag);
         putString(UC("i"));
     } else if (o.isCodeBuilder()) {
         putString(UC("<code-builder "));
-        putDatum(Object::makeFixnum(o.val));
+        print<isHumanReadable>(Object::makeFixnum(o.val));
         putString(UC(">"));
     } else if (o.isTranscoder()) {
         Transcoder* transcoder = o.toTranscoder();
         putString(UC("<transcoder codec="));
-        putDatum(transcoder->codec());
+        print<isHumanReadable>(transcoder->codec());
         putString(UC(", eol-style="));
-        putDatum(transcoder->eolStyleSymbol());
+        print<isHumanReadable>(transcoder->eolStyleSymbol());
         putString(UC(", error-handling-mode="));
-        putDatum(transcoder->errorHandlingModeSymbol());
+        print<isHumanReadable>(transcoder->errorHandlingModeSymbol());
         putString(UC(">"));
 
     } else {
         putString(UC("#<unknown datum>"));
     }
-
-    // temp
-//     fflush(stdout);
-//     fflush(stderr);
 }
-
-// borrwed from Ypsilon
-bool TextualOutputPort::writeAbbreviated(Object obj)
-{
-    if (obj.isSymbol()) {
-        if (obj == Symbol::QUOTE || obj == Symbol::QUOTE_B) {
-            putChar('\'');
-            return true;
-        } else if (obj == Symbol::UNQUOTE || obj == Symbol::UNQUOTE_B) {
-            putChar(',');
-            return true;
-        } else if (obj == Symbol::UNQUOTE_SPLICING || obj == Symbol::UNQUOTE_SPLICING_B) {
-            putString(",@");
-            return true;
-        } else if (obj == Symbol::QUASIQUOTE || obj == Symbol::QUASIQUOTE_B) {
-            putChar('`');
-            return true;
-        } else if (obj == Symbol::SYNTAX || obj == Symbol::SYNTAX_B) {
-            putString(UC("#\'"));
-            return true;
-        } else if (obj == Symbol::UNSYNTAX || obj == Symbol::UNSYNTAX_B) {
-            putString(UC("#,"));
-            return true;
-        } else if (obj == Symbol::UNSYNTAX_SPLICING || obj == Symbol::UNSYNTAX_SPLICING_B) {
-            putString("#,@");
-            return true;
-        } else if (obj == Symbol::QUASISYNTAX || obj == Symbol::QUASISYNTAX_B) {
-            putString(UC("#`"));
-            return true;
-        }
-
-    }
-    return false;
-}
-
 
 void TextualOutputPort::display(Object o)
 {
-    // todo more faster code
-    if (o.isTrue()) {
-        putString(UC("#t"));
-    } else if (o.isFalse()) {
-        putString(UC("#f"));
-    } else if (o.isNil()) {
-        putString(UC("()"));
-    } else if (o.isUndef()) {
-        putString(UC("#<unspecified>"));
-    } else if (o.isUnbound()) {
-        putString(UC("#<unbound variable>"));
-    } else if (o.isEof()) {
-        putString(UC("#<eof-object>"));
-    } else if (o.isFixnum()) {
-        static char buf[32];
-        snprintf(buf, 32, "%ld", (long)o.toFixnum());
-        putString(buf);
-    } else if (o.isCallable()) {
-        putString(UC("callable"));
-    } else if (o.isFlonum()) {
-        Flonum* const flonum = o.toFlonum();
-        static char buf[256];
-        if (flonum->isNan()) {
-            putString(UC("+nan.0"));
-        } else if (flonum->isInfinite()) {
-            if (flonum->value() > 0.0) {
-                putString(UC("+inf.0"));
-            } else {
-                putString(UC("-inf.0"));
-            }
-        } else {
-//            snprintf(buf, sizeof(buf), "%.20g", flonum->value());
-            snprintf(buf, sizeof(buf), "%f", flonum->value());
-            putString(buf);
-        }
-    } else if (o.isInstruction()) {
-        static char buf[32];
-        snprintf(buf, 32, "[insn %d]", o.toInstruction());
-        putString(buf);
-    } else if (o.isCompilerInstruction()) {
-        static char buf[32];
-        snprintf(buf, 32, "[comp:%d]", o.toInstruction());
-        putString(buf);
-    } else if (o.isChar()) {
-        putChar(o.toChar());
-    } else if (o.isString()) {
-        putString(o.toString());
-    } else if (o.isPair()) {
-        bool abbreviated = o.cdr().isPair() && o.cdr().cdr().isNil() && writeAbbreviated(o.car());
-        if (abbreviated) {
-            o = o.cdr();
-        } else {
-            putChar('(');
-        }
-        bool head = true;
-        for (Object e = o; e != Object::Nil; e = e.cdr()) {
-            if (head) head = false;
-            else putChar(' ');
-            if (e.isPair()) {
-                if (e.car() == Symbol::UNQUOTE) {
-                    if (e.cdr().isPair() && e.cdr().cdr().isNil()) {
-                        putString(". ,");
-                        display(e.cdr().car());
-                        break;
-                    }
-                }
-                display(e.car());
-            } else {
-                putString(". ");
-                display(e);
-                break;
-            }
-        }
-        if (!abbreviated) {
-            putChar(')');
-        }
-        return;
-    } else if (o.isVector()) {
-        Vector* v = o.toVector();
-        putString(UC("#("));
-        for (int i = 0; i < v->length(); i++) {
-            putDatum(v->ref(i));
-            if (i != v->length() - 1) putChar(' ');
-        }
-        putString(UC(")"));
-    } else if (o.isSymbol()) {
-        Symbol* symbol = o.toSymbol();
-//        Object s = symbol->toString();
-        putString(symbol->c_str());
-    } else if (o.isRegexp()) {
-        putChar('#');
-        putChar('/');
-        putString(o.toRegexp()->pattern());
-        putChar('/');
-    } else if (o.isSocket()) {
-        putString(o.toSocket()->toString());
-    } else if (o.isRegMatch()) {
-        putString(UC("#<reg-match>"));
-    } else if (o.isEqHashTable()) {
-        putString(UC("#<eq-hashtable>"));
-    } else if (o.isEqvHashTable()) {
-        putString(UC("#<eqv-hashtable>"));
-    } else if (o.isGenericHashTable()) {
-        putString(UC("#<hashtable>"));
-    } else if (o.isClosure()) {
-        putString(UC("#<closure "));
-        putDatum(Object::makeFixnum(o.val));
-        putString(UC(">"));
-    } else if (o.isCProcedure()) {
-        putString(UC("#<subr "));
-        putDatum(getCProcedureName(o));
-        putString(UC(">"));
-    } else if (o.isByteVector()) {
-        ByteVector* const byteVector = o.toByteVector();
-        const int length = byteVector->length();
-        putString(UC("#vu8("));
-        for (int i = 0; i < length; i++) {
-            if (i != 0) {
-                putString(" ");
-            }
-            putDatum(Object::makeFixnum(byteVector->u8Ref(i)));
-        }
-        putString(UC(")"));
-    } else if (o.isBox()) {
-        putString(UC("#<box>"));
-    } else if (o.isTextualInputPort()) {
-        putString(o.toTextualInputPort()->toString());
-    } else if (o.isStack()) {
-        putString(UC("#<stack>"));
-    } else if (o.isCodec()) {
-        Codec* codec = o.toCodec();
-        putString(UC("#<codec "));
-        putString(codec->getCodecName());
-        putString(UC(">"));
-    } else if (o.isBinaryInputPort()) {
-        putString(o.toBinaryInputPort()->toString().data());
-    } else if (o.isBinaryOutputPort()) {
-        putString(o.toBinaryOutputPort()->toString().data());
-    } else if (o.isBinaryInputOutputPort()) {
-        putString(o.toBinaryInputOutputPort()->toString().data());
-    } else if (o.isRecordConstructorDescriptor()) {
-        putString(UC("#<record-constructor-descriptor>"));
-    } else if (o.isRecordTypeDescriptor()) {
-        putString(UC("#<record-type-descriptor>"));
-    } else if (o.isCompoundCondition()) {
-        putString(UC("#<compound-condition "));
-        CompoundCondition* const c = o.toCompoundCondition();
-        const ObjectVector& conditions = c->conditions();
-        for (ObjectVector::const_iterator it = conditions.begin(); it != conditions.end(); ++it) {
-            if (it != conditions.begin()) {
-                putString(UC(" "));
-            }
-            putDatum(*it);
-
-        }
-        putString(UC(">"));
-    } else if (o.isRecord()) {
-//        Record* const record = o.toRecord();
-//         putString(UC("#<record "));
-//         putDatum(record->recordTypeDescriptor()->name(), inList);
-//         putString(UC(" "));
-//         for (int i = 0; i < record->fieldsLength(); i++) {
-//             putDatum(record->fieldAt(i));
-//             putString(UC(" "));
-//         }
-//        putString(UC(">"));
-        Record* const record = o.toRecord();
-        putString(UC("#<record "));
-        putDatum(record->recordTypeDescriptor()->name());
-//         for (int i = 0; i < record->fieldsLength(); i++) {
-//             putDatum(record->fieldAt(i));
-//             putString(UC(" "));
-//         }
-        putString(UC(">"));
-
-    } else if (o.isObjectPointer()) {
-        putString(UC("#<object pointer>"));
-    } else if (o.isTextualOutputPort()) {
-        putString(o.toTextualOutputPort()->toString());
-    } else if (o.isRatnum()) {
-        display(o.toRatnum()->toString());
-    } else if (o.isBignum()) {
-        putString(o.toBignum()->toString());
-    } else if (o.isCompnum()) {
-        Compnum* const c = o.toCompnum();
-        const Object real = c->real();
-        const Object imag = c->imag();
-        if (!Arithmetic::isExactZero(real)) {
-            display(real);
-        }
-        if (Arithmetic::ge(imag, Object::makeFixnum(0)) &&
-            !(imag.isFlonum() && (imag.toFlonum()->isNegativeZero() || (imag.toFlonum()->isInfinite())))) {
-            putString(UC("+"));
-        } else {
-        }
-        display(imag);
-        putString(UC("i"));
-    } else if (o.isCodeBuilder()) {
-        putString(UC("<code-builder "));
-        putDatum(Bignum::makeInteger(o.val));
-        putString(UC(">"));
-    } else if (o.isTranscoder()) {
-        Transcoder* transcoder = o.toTranscoder();
-        putString(UC("<transcoder codec="));
-        putDatum(transcoder->codec());
-        putString(UC(", eol-style="));
-        putDatum(transcoder->eolStyleSymbol());
-        putString(UC(", error-handling-mode="));
-        putDatum(transcoder->errorHandlingModeSymbol());
-        putString(UC(">"));
-
-    } else {
-        putString(UC("#<unknown datum>"));
-    }
+    print<true>(o);
 }
 
-// void TextualOutputPort::putPair(Object obj, bool inList /* = false */)
-// {
-//     if (!inList) {
-//         const Object kar = obj.car();
-//         if (obj.cdr().isPair()) {
-//             if (Symbol::UNQUOTE == kar) {
-//                 putString(UC(","));
-//                 putDatum(obj.second(), false);
-//                 return;
-//             } else if (Symbol::UNQUOTE_SPLICING == kar) {
-//                 putString(UC(",@"));
-//                 putDatum(obj.second(), false);
-//                 return;
-//             } else if (Symbol::QUOTE == kar) {
-//                 putString(UC("'"));
-//                 putDatum(obj.second(), false);
-//                 return;
-//             } else if (Symbol::QUASIQUOTE == kar) {
-//                 putString(UC("`"));
-//                 putDatum(obj.second(), false);
-//                 return;
-//             }
-//         }
-//     }
-
-//     if (obj.cdr().isPair()) {
-//         if (inList) {
-//             putDatum(obj.car(), false);
-//             putString(UC(" "));
-//             putDatum(obj.cdr(), true);
-//         } else {
-//             putString(UC("("));
-//             putDatum(obj.car(), false);
-//             putString(UC(" "));
-//             putDatum(obj.cdr(), true);
-//             putString(UC(")"));
-//         }
-//     } else if (obj.cdr().isNil()) {
-//         if (inList) {
-//             putDatum(obj.car(), false);
-//         } else {
-//             putString(UC("("));
-//             putDatum(obj.car(), false);
-//             putString(UC(")"));
-//         }
-//     } else {
-//         if (inList) {
-//             putDatum(obj.car(), false);
-//             putString(UC(" . "));
-//             putDatum(obj.cdr(), false);
-//         } else {
-//             putString(UC("("));
-//             putDatum(obj.car(), false);
-//             putString(UC(" . "));
-//             putDatum(obj.cdr(), false);
-//             putString(UC(")"));
-//         }
-//     }
-// }
+void TextualOutputPort::putDatum(Object o)
+{
+    print<false>(o);
+}
