@@ -1,3 +1,8 @@
+2009-05-15  higepon  <higepon@users.sourceforge.jp>
+
+        * TextualOutputPort.cpp : Refactoring display and putDatum using C++ function template.
+                                  Thanks to herumi-san.
+
 2009-05-13  higepon  <higepon@users.sourceforge.jp>
 
         * Ratnum.h : Reduce the memory allocation in aritmetic operations.
